--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<h1> Dane Dathrego </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dane Dathrego</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f7f7f7;
+      color: #222;
+    }
+
+    header {
+      background: #1a1a1a;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 6px;
+      margin-bottom: 20px;
+    }
+
+    .section {
+      margin-bottom: 40px;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>Dane Dathrego</h1>
+    <p>San Luis Obispo, CA • Graduating Spring 2026</p>
+  </header>
+
+  <div class="container">
+    <div class="section">
+      <h2>About Me</h2>
+      <p>
+        I'm an AI researcher, student, and engineer interested in networking, embedded systems,
+        and human–AI interaction. I enjoy building clean, thoughtful systems across hardware and software.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Projects</h2>
+      <ul>
+        <li>Networking: UDP file transfer protocol with selective-reject ARQ</li>
+        <li>Embedded: STM32 real-time clock + keypad interface</li>
+        <li>AI Research: Applied analysis of LLM behavior and evaluation</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Experience</h2>
+      <p><strong>AI Research Intern — e2f (2025)</strong><br />
+        Worked on analytical evaluations of LLM behavior, data annotation frameworks, and structured experimentation.</p>
+    </div>
+
+    <div class="section">
+      <h2>Contact</h2>
+      <p>Email: d.a.dathrego@gmail.com</p>
+    </div>
+  </div>
+</body>
+</html>
