--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dane Dathrego</title>
   <style>
     body {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: Helvetica, sans-serif;
       margin: 0;
       padding: 0;
       background: #f7f7f7;
@@ -35,13 +35,30 @@
     .section {
       margin-bottom: 40px;
     }
+
+    footer {
+      background: #1a1a1a;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: #4da6ff;
+      text-decoration: none;
+    }   
+
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 
 <body>
   <header>
     <h1>Dane Dathrego</h1>
-    <p>San Luis Obispo, CA • Graduating Spring 2026</p>
+    <p>Cal Poly SLO • Graduating Spring 2026</p>
   </header>
 
   <div class="container">
@@ -73,5 +90,12 @@
       <p>Email: d.a.dathrego@gmail.com</p>
     </div>
   </div>
+  <footer>
+    <p>© 2025 Dane Dathrego</p>
+    <p>
+      <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a> •
+      <a href="mailto:d.a.dathrego@gmail.com">Email Me</a>
+    </p>
+  </footer>
 </body>
 </html>
