--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="section">
       <h2>About Me</h2>
       <p>
-        I'm an AI researcher, student, and engineer interested in networking, embedded systems,
+        I'm an engineering student interested in networking, embedded systems,
         and human–AI interaction. I enjoy building clean, thoughtful systems across hardware and software.
       </p>
     </div>
@@ -91,11 +91,11 @@
     </div>
   </div>
   <footer>
-    <p>© 2025 Dane Dathrego</p>
     <p>
       <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a> •
-      <a href="mailto:d.a.dathrego@gmail.com">Email Me</a>
+      <a href="mailto:d.a.dathrego@gmail.com">Email</a>
     </p>
+    <p>© 2025 Dane Dathrego</p>
   </footer>
 </body>
 </html>
