--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 </head>
 
 <body>
+  <header>
+    <h1>Dane Dathrego</h1>
+    <p> Cal Poly SLO  Graduating Spring 2026</p>
+  </header>
   <nav>
     <a data-link href="/">Home</a>
     <a data-link href="/about">About</a>
@@ -64,5 +68,12 @@
   </nav>
   <main id="app"></main>
   <script src="scripts/router.js"></script>
+  <footer>
+    <p>
+        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>
+        <a href="mailto:d.a.dathrego@gmail.com">Email</a>
+    </p>
+    <p>© 2025 Dane Dathrego</p>
+  </footer>
 </body>
 </html>
