--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,3 @@
 <h1>About Me</h1>
 <p>I'm an engineering student interested in networking, embedded systems, 
-    and human–AI interaction. I enjoy building clean, thoughtful systems across hardware and software.</p>
+    and human-AI interaction. I enjoy building clean, thoughtful systems across hardware and software.</p>
