SPA 3 about fixed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       margin-bottom: 40px;
     }
 
+    nav a:hover {
+        text-decoration: none;
+        color: grey;
+    }
+
     footer {
       background: #1a1a1a;
       color: white;
@@ -70,7 +75,7 @@
   <script src="scripts/router.js"></script>
   <footer>
     <p>
-        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>      
         <a href="mailto:d.a.dathrego@gmail.com">Email</a>
     </p>
     <p>© 2025 Dane Dathrego</p>
