--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       margin-bottom: 40px;
     }
 
+    nav {
+        text-align: center;
+        padding: 20px 20px;
+        background: #055e13
+    }
+
     nav a:hover {
         text-decoration: none;
         color: grey;
@@ -45,7 +51,7 @@
       background: #1a1a1a;
       color: white;
       text-align: center;
-      padding: 20px 10px;
+      padding: 20px 0;
       margin-top: 40px;
     }
 
