--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       font-family: Helvetica, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f7f7f7;
-      color: #222;
+      background: #212224;
+      color: white;
     }
 
     header {
-      background: #1a1a1a;
+      background: #1d2e28;
       color: white;
       padding: 40px 20px;
       text-align: center;
@@ -39,7 +39,13 @@
     nav {
         text-align: center;
         padding: 20px 20px;
-        background: #055e13
+        background: #055e13;
+        word-spacing: 5px;
+    }
+
+    nav a {
+        color: white;
+        text-decoration: none;
     }
 
     nav a:hover {
@@ -67,16 +73,13 @@
 </head>
 
 <body>
-  <header>
-    <h1>Dane Dathrego</h1>
-    <p> Cal Poly SLO  Graduating Spring 2026</p>
-  </header>
   <nav>
     <a data-link href="/">Home</a>
     <a data-link href="/about">About</a>
     <a data-link href="/projects">Projects</a>
     <a data-link href="/experience">Experience</a>
   </nav>
+  
   <main id="app"></main>
   <script src="scripts/router.js"></script>
   <footer>
