--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <a data-link href="/projects">Projects</a>
     <a data-link href="/experience">Experience</a>
   </nav>
-  
+  <div class="container"></div>
   <main id="app"></main>
   <script src="scripts/router.js"></script>
   <footer>
