--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     <a data-link href="/projects">Projects</a>
     <a data-link href="/experience">Experience</a>
   </nav>
-  <div class="container"></div>
+  <div class="container">
   <main id="app"></main>
   <script src="scripts/router.js"></script>
+  </div>
   <footer>
     <p>
         <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>      
