--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     }
 
     .container {
+      min-height: 1000px;
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
@@ -80,8 +81,8 @@
     <a data-link href="/experience">Experience</a>
   </nav>
   <div class="container">
-  <main id="app"></main>
-  <script src="scripts/router.js"></script>
+    <main id="app"></main>
+    <script src="scripts/router.js"></script>
   </div>
   <footer>
     <p>
