--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     }
 
     nav {
+        position: fixed;
         text-align: center;
         padding: 20px 20px;
         background: #055e13;
