--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     }
 
     .container {
-      min-height: 1000px;
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
@@ -76,19 +75,25 @@
 
 <body>
   <nav>
-    <a data-link href="/">Home</a>
+    <a data-link href="#Home">Home</a>
     <a data-link href="/about">About</a>
     <a data-link href="/projects">Projects</a>
     <a data-link href="/experience">Experience</a>
   </nav>
-  <div class="container">
-    <main id="app"></main>
-    <script src="scripts/router.js"></script>
+  <div id="Home" class="container">
+    <div class="section">
+        <h2>Hi. My Name is Dane.</h2>
+        <p>Stuff about me.</p>
+    </div>
+    <div class="section">
+        <h2>Projects</h2>
+        <p>list my projects</p>
+    </div>
   </div>
   <footer>
     <p>
-        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn</a>      
-        <a href="mailto:d.a.dathrego@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/danedathrego" target="_blank">LinkedIn  </a>      
+        <a href="mailto:d.a.dathrego@gmail.com">  Email</a>
     </p>
     <p>© 2025 Dane Dathrego</p>
   </footer>
