--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dane Dathrego</title>
-  <meta name="description" content="Dane Dathrego — projects, about, contact." />
   <style>
     :root{
-      --bg: #0f1111;
-      --panel: #161718;
-      --muted: #bfc8c2;
-      --accent: #7aa893;
-      --accent-2: #93a7b5;
+      --bg: #212224;
+      --panel: #18392b;
+      --muted: #1d2e28;
+      --accent: #0f5132;
+      --accent-2: #0a5c36;
       --white: #f5f5f4;
       --maxw: 980px;
       --radius: 12px;
@@ -21,7 +20,7 @@
     body{
       margin:0;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg,var(--bg) 0%, #0b0b0b 100%);
+      background: "color:var(--bg)";
       color:var(--white);
       line-height:1.45;
     }
@@ -46,6 +45,7 @@
     .social a{color:var(--accent-2); text-decoration:none; margin-left:12px}
   </style>
 </head>
+
 <body>
   <nav aria-label="Primary">
     <div class="nav-inner">
@@ -64,12 +64,19 @@
   <main id="app">
     <section id="home">
       <h1 style="font-size:48px; color:var(--accent); margin-bottom:16px">Dane Dathrego</h1>
-      <p style="color:var(--muted); font-size:18px; max-width:70ch;">Maker, engineer, and student focused on networking, embedded systems, and applied ML.</p>
+      <p style="color:var(--muted); font-size:18px; max-width:70ch;">
+        Maker, engineer, and student focused on networking, embedded systems, and applied ML.
+      </p>
     </section>
 
     <section class="card" id="about-section">
       <h2 style="color:var(--accent); margin-top:0">About Me</h2>
-      <p style="color:var(--muted); font-size:16px">I'm a computer engineering student graduating in Spring 2026. I enjoy working close to the hardware and understanding how systems communicate — from embedded devices to network protocols. My projects help me explore the edges between software, hardware, and clean interface design.</p>
+      <p style="color:var(--muted); font-size:16px">
+        I'm a computer engineering student graduating in Spring 2026. 
+        I enjoy working close to the hardware and understanding how systems communicate — 
+        from embedded devices to network protocols. My projects help me explore the 
+        edges between software, hardware, and clean interface design.
+      </p>
     </section>
 
     <section class="card" id="projects-section">
@@ -78,17 +85,23 @@
         <article class="proj">
           <h3 style="color:var(--accent-2)">Packet Sniffer (C)</h3>
           <div class="tag">Systems</div>
-          <p style="color:var(--muted)">A pcap-based packet analyzer for network traffic inspection and protocol parsing.</p>
+          <p style="color:var(--muted)">A pcap-based packet analyzer 
+            for network traffic inspection and protocol parsing.
+          </p>
         </article>
         <article class="proj">
           <h3 style="color:var(--accent-2)">STM32 Keypad Clock</h3>
           <div class="tag">Embedded</div>
-          <p style="color:var(--muted)">Real-time clock with UART output and keypad input using TIM2 interrupts.</p>
+          <p style="color:var(--muted)">Real-time clock with 
+            UART output and keypad input using TIM2 interrupts.
+          </p>
         </article>
         <article class="proj">
           <h3 style="color:var(--accent-2)">rcopy (UDP)</h3>
           <div class="tag">Networks</div>
-          <p style="color:var(--muted)">Reliable file transfer using selective-reject ARQ and sliding window buffering.</p>
+          <p style="color:var(--muted)">Reliable file transfer 
+            using selective-reject ARQ and sliding window buffering.
+          </p>
         </article>
       </div>
     </section>
@@ -106,11 +119,6 @@
 
   <footer>
     <div>© 2025 Dane Dathrego</div>
-    <div style="text-align:right">
-      <a href="https://www.linkedin.com/in/danedathrego" target="_blank" rel="noopener">LinkedIn</a>
-      &nbsp;•&nbsp;
-      <a href="mailto:d.a.dathrego@gmail.com">Email</a>
-    </div>
   </footer>
 </body>
 </html>
